glx/testdata/valid/citation-minimal.glx
citations:
  citation-12345678:
    version: "1.0"
    source: source-abc12345
