glx/testdata/invalid/assertion-invalid-confidence.glx
# Invalid: Invalid confidence level
assertions:
  assertion-12345678:
    version: "1.0"
    subject: person-a1b2c3d4
    claim: birth_date
    value: "1850-01-15"
    citations:
      - citation-12345678
    confidence: invalid_level
